Fix scrollbar hover

--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,9 @@ display: none;
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+    background: #aaa; 
+    border: 4px solid rgba(0, 0, 0, 0);  /* Transparent border together with `background-clip: padding-box` does the trick */
+    background-clip: padding-box;
 }
 .page-1 {
     height: 100vh;
